--- a/package.json
+++ b/package.json
@@ -9,25 +9,23 @@
   "files": [ "build/" ],
   "main": "build/index.js",
   "dependencies": {
-    "tape": "4.x.x",
-    "through": "2.x.x",
-    "require-uncached": "1.x.x",
-    "babel-runtime": "6.x.x"
+    "tape": "^4.6.0",
+    "through": "^2.3.8",
+    "require-uncached": "^1.0.2",
+    "babel-runtime": "^6.11.6"
   },
   "devDependencies": {
-    "start-babel-cli": "1.x.x",
-    "start-start-preset": "1.x.x",
-
-    "babel-preset-es2015": "6.5.x",
-    "babel-plugin-transform-runtime": "6.5.x",
-    "babel-plugin-add-module-exports": "0.1.x",
-
-    "babel-eslint": ">5.0.0-beta1",
-    "eslint-plugin-babel": "3.1.x",
-    "eslint-config-rebem": "0.3.x",
-
-    "tape": "4.4.x",
-    "husky": "0.10.x"
+    "start-babel-cli": "^1.0.0",
+    "start-start-preset": "^2.0.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-eslint": "^6.1.2",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-config-rebem": "^1.1.0",
+    "tape": "^4.6.0",
+    "sinon": "^1.17.5",
+    "husky": "^0.11.6"
   },
   "scripts": {
     "start": "start-runner start-start-preset",
@@ -35,8 +33,7 @@
     "prepublish": "npm start build"
   },
   "engines": {
-    "node": ">=0.12.0",
-    "npm": ">=2.7.0"
+    "node": ">=0.12.0"
   },
   "license": "MIT"
 }
