--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,40 @@
-# https://docs.travis-ci.com/user/customizing-the-build/
+# https://www.appveyor.com/docs/appveyor-yml
 
-sudo: false
+version: "{build}"
 
-git:
-  depth: 1
+init:
+  - git config --global core.autocrlf false
 
-language: node_js
+shallow_clone: true
 
-node_js:
-  - "0.12"
-  - "4"
-  - "5"
+environment:
+  matrix:
+    - nodejs_version: "0.12"
+    - nodejs_version: "4"
+    - nodejs_version: "5"
+    - nodejs_version: "6"
+
+cache:
+  - "%APPDATA%\\npm-cache"
 
 branches:
   only:
     - master
+    - /^greenkeeper-.*$/
+
+skip_tags: true
 
 matrix:
   fast_finish: true
 
-before_install:
-  - npm install -g npm
-  - npm --version
+build: off
 
-script: npm start ci
+install:
+  - ps: Install-Product node $env:nodejs_version
+  - npm install -g npm
+  - npm install
+
+test_script:
+  - node --version
+  - npm --version
+  - npm start ci
