--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,25 @@
-# https://www.appveyor.com/docs/appveyor-yml
+# https://docs.travis-ci.com/user/customizing-the-build/
 
-version: "{build}"
+sudo: false
 
-init:
-  - git config --global core.autocrlf false
+language: node_js
 
-shallow_clone: true
-
-environment:
-  matrix:
-    - nodejs_version: "0.12"
-    - nodejs_version: "4"
-    - nodejs_version: "5"
-    - nodejs_version: "6"
-
-cache:
-  - "%APPDATA%\\npm-cache"
+node_js:
+  - "0.12"
+  - "4"
+  - "5"
+  - "6"
 
 branches:
   only:
     - master
     - /^greenkeeper-.*$/
 
-skip_tags: true
-
 matrix:
   fast_finish: true
 
-build: off
-
-install:
-  - ps: Install-Product node $env:nodejs_version
+before_install:
   - npm install -g npm
-  - npm install
-
-test_script:
-  - node --version
   - npm --version
-  - npm start ci
+
+script: npm start ci
