--- a/package.json
+++ b/package.json
@@ -2,30 +2,34 @@
   "name": "start-tape",
   "version": "0.1.3",
   "description": "Tape task for Start",
-  "keywords": [ "start", "start-task", "tape", "tap" ],
+  "keywords": [
+    "start",
+    "start-task",
+    "tape",
+    "tap"
+  ],
   "homepage": "https://github.com/start-runner/tape",
   "repository": "start-runner/tape",
   "author": "Kir Belevich <kir@soulshine.in> (https://github.com/deepsweet)",
-  "files": [ "build/" ],
+  "files": [
+    "build/"
+  ],
   "main": "build/index.js",
   "dependencies": {
-    "tape": "^4.6.0",
-    "through": "^2.3.8",
     "require-uncached": "^1.0.2",
-    "babel-runtime": "^6.11.6"
+    "tape": "^4.6.0",
+    "through": "^2.3.8"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.2",
+    "babel-preset-start": "^0.1.0",
+    "eslint-config-rebem": "^1.1.0",
+    "eslint-plugin-babel": "^3.3.0",
+    "husky": "^0.11.6",
+    "sinon": "^1.17.5",
     "start-babel-cli": "^3.0.0",
     "start-start-preset": "^2.0.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-eslint": "^6.1.2",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-config-rebem": "^1.1.0",
-    "tape": "^4.6.0",
-    "sinon": "^1.17.5",
-    "husky": "^0.11.6"
+    "tape": "^4.6.0"
   },
   "scripts": {
     "start": "start-runner -p start-start-preset",
@@ -33,7 +37,7 @@
     "prepublish": "npm start build"
   },
   "engines": {
-    "node": ">=0.12.0"
+    "node": ">=4"
   },
   "license": "MIT"
 }
