--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,13 @@
 {
   "extends": [
-    "rebem/configs/common",
-    "rebem/configs/babel"
-  ]
+    "tough/config/common",
+    "tough/config/node",
+    "tough/config/esnext"
+  ],
+  "rules": {
+    "no-magic-numbers": 0,
+    "no-underscore-dangle": 0,
+    "babel/no-invalid-this": 0,
+    "immutable/no-mutation": 0
+  }
 }
